--- a/style.css
+++ b/style.css
@@ -94,3 +94,18 @@ img{
 	box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
 	cursor: pointer;
 }
+@media screen and (max-width: 1000px) {
+    body {
+        height: auto; 
+    }
+    .nav-item {
+        
+        border: none;
+        
+        outline: none;
+        height: 20px;
+        width: 20px;
+        font-size: small;
+    }
+    
+}
